# django-template

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: continuous-integration.yaml
project/: settings.py  urls.py
project/settings/: common.py  development.py  production.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
users/tests/: factories.py  test_models.py
