[tool.poetry]
name = "project"
version = "0.1.0"
description = "Description."
authors = ["Author <author@example.com>"]

[tool.poetry.dependencies]
django = "^3.1"
dj-database-url = "^0.5"
gunicorn = "^20.0"
psycopg2-binary = "^2.8"
python = "^3.9"
sentry-sdk = "^0.19"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
factory-boy = "^3.1"
flake8 = "^3.8"
flake8-bugbear = "^20.11"
pytest = "^6.0"
pytest-cov = "^2.10"
pytest-django = "^4.1"
pytest-factoryboy = "^2.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings.development"

[tool.coverage.run]
branch = true
source = ["project", "users"]
omit = ["*/migrations/*", "*/admin.py"]

[tool.coverage.report]
skip_covered = true
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
